update cassandra document — G1GC & GC LOG